--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       </p>
       <button onclick="loadRandom()">Mostrar otra</button>
       <p id="randomText"></p>
-      <button onclick="downloadImage()">Descargar Imagen</button>
+      <a id="downloadLink" download>
+        Descargar Imagen
+      </a>
+      <img id="randomImage" src="" alt="Imagen aleatoria" />      
       <img id="randomImage" src="" alt="Imagen aleatoria" />
       <a id="downloadBtn" style="display: none"></a>
     </div>
