--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       </p>
       <button onclick="loadRandom()">Mostrar otra</button>
       <p id="randomText"></p>
-      <a id="downloadLink" download>
-        Descargar Imagen
-      </a>
+      
+      <a id="downloadLink" href="#" download>Descargar Imagen</a>
+
       <img id="randomImage" src="" alt="Imagen aleatoria" />    
     </div>
     <script src="script.js"></script>
