Test de descargar imagen

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div>
-      <button onclick="copyText()">Copiar texto</button>
+      <button onclick="copyText()" class="copyText">Copiar texto</button>
       <p id="copyMessage" style="color: green; display: none">
         Texto copiado al portapapeles
       </p>
-      <button onclick="loadRandom()">Mostrar otra</button>
+      <button onclick="loadRandom()">🔄️</button>
       <p id="randomText"></p>
       
-      <a id="downloadLink" href="#" download>Descargar Imagen</a>
+      <a id="downloadLink" href="" download>Descargar Imagen</a>
 
       <img id="randomImage" src="" alt="Imagen aleatoria" />    
     </div>
