--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div>
-      <button>Decargar imagen <br>y<br>copiar texto</button>
+      <button onclick="copyText()"><a class="downloadLink" href="" download>Decargar imagen <br>y<br>copiar texto</a></button>
       <button onclick="copyText()" class="copyText">Copiar texto</button>      
-      <a id="downloadLink" href="" download>Descargar Imagen</a>
+      <a class="downloadLink" href="" download>Descargar Imagen</a>
 
       <button onclick="loadRandom()">🔄️</button>
 
