--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <button onclick="copyText() ">Decargar imagen <br>y<br>copiar texto</button>
       <button onclick="copyText()" class="copyText">Copiar texto</button>      
-      <a id="downloadLink" href="" download>Descargar Imagen</a>
+      <button><a id="downloadLink" href="" download>Descargar Imagen</a></button>
 
       <button onclick="loadRandom()">🔄️</button>
 
