--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div>
-      <button onclick="copyText() ">Decargar imagen <br>y<br>copiar texto</button>
+      <button onclick="downloadAndCopy()">Descargar imagen <br>y<br>copiar texto</button>
       <button onclick="copyText()" class="copyText">Copiar texto</button>      
-      <button><a id="downloadLink" href="" download>Descargar Imagen</a></button>
+      <a id="downloadLink" href="" download>Descargar Imagen</a>
 
       <button onclick="loadRandom()">🔄️</button>
 
