Corrigiendo el catch

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="slot">
-        <img id="randomImage" src="" alt="Imagen aleatoria" />
+        <img id="randomImage" src=""/>
         <p id="randomText"></p>
       </div>
     </div>
